Specify z-index for code snippets to avoid them clashing with sidebar (#1051)

--- a/modules/docs/arrow-docs/docs/_sass/components/_code.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_code.scss
@@ -18,6 +18,7 @@ p, ul {
   font-family: $code-font-family !important;
   font-size: 0.8rem !important;
   @include border-radius (3px);
+  z-index: 0;
 }
 
 .hljs {
